--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-qmap": "^0.1.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.3",
     "recharts": "^1.3.3",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
